fix missing background in martial arts

--- a/martial-arts/styles.css
+++ b/martial-arts/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(images/background.jpg);
+  background-image: url(/martial-arts/images/background.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: contain;
